@@ -37,7 +37,10 @@
 [0] %P="sv-str"
 [0] %u=dcba %0u=dcba
 [0] %U=dcba %0U=dcba
-[0] %D= 12 %d= 12 %01d=12 %06d=000012 %6d=    12
+[0] %D= 12 %d= 12 %01d=12 %06d=000012 %6d=    12 %-06d=12     %-6d=12    
+[0] %X=00c %x=00c %01x=c %06x=00000c %6x=00000c %-06x=c      %-6x=c     
+[0] %O=014 %o=014 %01o=14 %06o=000014 %6o=000014 %-06o=14     %-6o=14    
+[0] %B=000001100 %b=000001100 %01b=1100 %06b=001100 %6b=001100 %-06b=1100   %-6b=1100  
 [0] %t=                   0 %03t=  0 %0t=0
 
 [0] %s=! %s= what! %s= hmmm!1234
